<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profileCircleIv"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/custom_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileIv"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/person_icon"
        app:layout_constraintBottom_toBottomOf="@id/profileCircleIv"
        app:layout_constraintEnd_toEndOf="@id/profileCircleIv"
        app:layout_constraintStart_toStartOf="@id/profileCircleIv"
        app:layout_constraintTop_toTopOf="@id/profileCircleIv" />

    <TextView
        android:id="@+id/profileNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:textColor="@color/app_text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileCircleIv" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/app_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileNameTv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upgradeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/upgrade"
        android:textAllCaps="false"
        android:textColor="@color/app_text_color"
        android:textSize="12sp"
        app:backgroundTint="@color/app_special_color"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@id/greyBtnsCL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greyBtnsCL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35dp"
        app:layout_constraintBottom_toTopOf="@id/logoutBtn"
        app:layout_constraintTop_toBottomOf="@id/upgradeBtn">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/privacyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_icon"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:text="@string/privacy"
            android:textAllCaps="false"
            android:textColor="@color/app_text_color"
            android:textSize="12sp"
            app:backgroundTint="@color/app_btn_color"
            app:cornerRadius="25dp"
            app:icon="@drawable/privacy_icon"
            app:iconPadding="25dp"
            app:iconTint="@color/app_black_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/purchaseHistoryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableEnd="@drawable/arrow_icon"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:text="@string/purchase_history"
            android:textAllCaps="false"
            android:textColor="@color/app_text_color"
            android:textSize="12sp"
            app:backgroundTint="@color/app_btn_color"
            app:cornerRadius="25dp"
            app:icon="@drawable/history_icon"
            app:iconPadding="25dp"
            app:iconTint="@color/app_black_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacyBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/helpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableEnd="@drawable/arrow_icon"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textColor="@color/app_text_color"
            android:textSize="12sp"
            app:backgroundTint="@color/app_btn_color"
            app:cornerRadius="25dp"
            app:icon="@drawable/help_icon"
            app:iconPadding="25dp"
            app:iconTint="@color/app_black_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purchaseHistoryBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableEnd="@drawable/arrow_icon"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/app_text_color"
            android:textSize="12sp"
            app:backgroundTint="@color/app_btn_color"
            app:cornerRadius="25dp"
            app:icon="@drawable/settings_icon"
            app:iconPadding="25dp"
            app:iconTint="@color/app_black_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helpBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inviteBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableEnd="@drawable/arrow_icon"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|center_vertical"
            android:text="@string/invite"
            android:textAllCaps="false"
            android:textColor="@color/app_text_color"
            android:textSize="12sp"
            app:backgroundTint="@color/app_btn_color"
            app:cornerRadius="25dp"
            app:icon="@drawable/invite_icon"
            app:iconPadding="25dp"
            app:iconTint="@color/app_black_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="15dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/app_bg_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:cornerRadius="25dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greyBtnsCL" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decoration"
        android:layout_width="135dp"
        android:layout_height="5dp"
        android:layout_marginBottom="5dp"
        app:backgroundTint="@color/black"
        app:cornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>